--- a/styles.scss
+++ b/styles.scss
@@ -1,102 +1,109 @@
 * {
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    position: relative;
-    background-color: #e7e7e7;
-    color: #2d2013;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    -webkit-transition: background-color 0.5s ease;
-    transition: background-color 0.5s ease;
+  position: relative;
+  background-color: #e7e7e7;
+  color: #2d2013;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  -webkit-transition: background-color 0.5s ease;
+  transition: background-color 0.5s ease;
 
-    &.dark {
-        background-color: #2d2013;
-        color: #fff;
+  &.dark {
+    background-color: #2d2013;
+    color: #fff;
 
-        & .single-meal img {
-            border: 4px solid #FFF;
-        }
-
-        & .meals .meal img {
-            border: 4px solid #FFF;
-        }
+    & .single-meal img {
+      border: 4px solid #fff;
     }
+
+    & .meals .meal img {
+      border: 4px solid #fff;
+    }
+  }
 }
 
 .toggle {
+  position: absolute;
+  top: 5rem;
+  right: 5rem;
+  height: 2.6rem;
+  width: 5rem;
+  border: 2px solid #2d2013;
+  border-radius: 2rem;
+  cursor: pointer;
+
+  &::before {
+    content: "";
     position: absolute;
-    top: 5rem;
-    right: 5rem;
-    height: 2.6rem;
-    width: 5rem;
+    top: -0.2rem;
+    /* Experimentation to come up with the value*/
+    left: -0.1rem;
+    /* Experimentation to come up with the value*/
+    height: 2.2rem;
+    width: 2.1rem;
     border: 2px solid #2d2013;
-    border-radius: 2rem;
-    cursor: pointer;
+    border-radius: 50%;
+    background-color: #2d2013;
 
-    &::before {
-        content: "";
-        position: absolute;
-        top: -0.2rem;
-        /* Experimentation to come up with the value*/
-        left: -0.1rem;
-        /* Experimentation to come up with the value*/
-        height: 2.2rem;
-        width: 2.1rem;
-        border: 2px solid #2d2013;
-        border-radius: 50%;
-        background-color: #2d2013;
+    -webkit-transition: all 0.5s ease;
 
-        -webkit-transition: all 0.5s ease;
-
-        transition: all 0.5s ease;
-    }
+    transition: all 0.5s ease;
+  }
 }
 
 .toggle.active {
-    border: 2px solid #fff;
+  border: 2px solid #fff;
 
-    &::before {
-        left: 2.2rem;
-        background-color: #fff;
-    }
+  &::before {
+    left: 2.2rem;
+    background-color: #fff;
+  }
 }
 
-
 .title {
-    margin-bottom: 2rem;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgb(45, 32, 19)), to(rgba(45, 32, 19, 0.6)));
+  background-image: linear-gradient(to right, rgb(45, 32, 19), rgba(45, 32, 19, 0.6));
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  font-size: 2.5rem;
+  font-family: Poppins, sans-serif;
+  margin-bottom: 2rem;
 }
 
 .container {
-    margin: 5rem auto;
-    max-width: 80rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    text-align: center;
+  margin: 5rem auto;
+  //   max-width: 80rem;
+  width: 95%; // I actually like full width instead
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .flex {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 ///////////////////////////////////////////////
@@ -104,129 +111,147 @@ body {
 .search-input,
 .search-btn,
 .random-btn {
-    border: 1px solid #dedede;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    font-size: 1.4rem;
-    padding: 0.8rem 1rem;
+  border: 1px solid #dedede;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  font-size: 1.4rem;
+  padding: 0.8rem 1rem;
+  outline: none;
+  margin-bottom: 4rem;
 }
 
 .search-input {
-    width: 30rem;
+  width: 30rem;
+  margin-right: 0.5rem;
+
+  &:focus {
+    outline: 0.25rem solid #2d2013;
+  }
 }
 
 .search-btn {
-    border-left: 0;
-    border-radius: 0;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    cursor: pointer;
+  border-left: 0;
+  border-radius: 0;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  cursor: pointer;
 }
 
 .random-btn {
-    margin-left: 1rem;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    cursor: pointer;
+  margin-left: 1rem;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  cursor: pointer;
 }
 
 .meals {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+  //NOTE: Using grid instead of flexbox
+  // display: -webkit-box;
+  // display: -ms-flexbox;
+  // display: flex;
+  // -ms-flex-wrap: wrap;
+  //     flex-wrap: wrap;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 18rem));
+  gap: 3rem;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 
-    //NOTE: Class appears using JS
-    .meal {
-        position: relative;
-        height: 18rem;
-        width: 18rem;
-        text-align: center;
-        cursor: pointer;
-
-        img {
-            width: 100%;
-            height: 100%;
-            border: 4px solid #2d2013;
-            border-radius: 2px;
-        }
-
-        &-info {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-
-            display: -webkit-box;
-
-            display: -ms-flexbox;
-
-            display: flex;
-            -webkit-box-pack: center;
-            -ms-flex-pack: center;
-            justify-content: center;
-            -webkit-box-align: center;
-            -ms-flex-align: center;
-            align-items: center;
-            -webkit-transition: opacity 0.2s ease;
-            transition: opacity 0.2s ease;
-
-            opacity: 0;
-
-            h3 {
-                color: #fff;
-            }
-        }
-
-        &:hover .meal-info {
-            opacity: 1;
-        }
-    }
-
-}
-
-
-.single-meal {
-    margin: 3rem auto;
-    width: 70%;
+  //NOTE: Class appears using JS
+  .meal {
+    position: relative;
+    // height: 18rem;
+    // width: 18rem;
+    text-align: center;
+    cursor: pointer;
 
     img {
-        width: 30rem;
-        margin: 1.5rem;
-        border: 4px solid #2d2013;
-        border-radius: 2px;
-    }
-
-    p {
-        margin: 0;
-        letter-spacing: 0.5px;
-        line-height: 1.5;
-    }
-
-    ul {
-        list-style: none;
-        padding-left: 0;
-
-        li {
-            border: 1px solid #ededed;
-            border-radius: 3px;
-            background-color: #fff;
-            display: inline-block;
-            color: #2d2013;
-            font-size: 1.2rem;
-            font-weight: bold;
-            padding: 5px;
-            margin: 0 5px 5px 0;
-        }
+      width: 100%;
+      height: 100%;
+      border: 4px solid #2d2013;
+      border-radius: 2px;
     }
 
     &-info {
-        margin: 2rem;
-        padding: 1rem;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+
+      display: -webkit-box;
+
+      display: -ms-flexbox;
+
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-transition: opacity 0.2s ease;
+      transition: opacity 0.2s ease;
+
+      opacity: 0;
+
+      a {
+        color: rgb(245, 245, 245);
+        font-size: 1.4rem;
+        text-decoration: none;
+        letter-spacing: 0.125rem;
+        word-spacing: 0.125rem;
+        padding: 0 0.5rem;
+      }
     }
+
+    &:hover .meal-info {
+      opacity: 1;
+    }
+  }
+}
+
+.single-meal {
+  margin: 3rem auto;
+  width: 70%;
+
+  img {
+    width: 30rem;
+    margin: 1.5rem;
+    border: 4px solid #2d2013;
+    border-radius: 2px;
+  }
+
+  p {
+    margin: 0;
+    letter-spacing: 0.5px;
+    line-height: 1.5;
+  }
+
+  ul {
+    list-style: none;
+    padding-left: 0;
+
+    li {
+      border: 1px solid #ededed;
+      border-radius: 3px;
+      background-color: #fff;
+      display: inline-block;
+      color: #2d2013;
+      font-size: 1.2rem;
+      font-weight: bold;
+      padding: 5px;
+      margin: 0 5px 5px 0;
+    }
+  }
+
+  &-info {
+    margin: 2rem;
+    padding: 1rem;
+  }
 }
 
 /*
@@ -238,37 +263,35 @@ body {
 
 // 50em = 800px
 @media (max-width: 50em) {
-    .meals {
-        grid-template-columns: repeat(3, 1fr);
-    }
-
+  .meals {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 // 43.75em = 700px
 @media (max-width: 43.75em) {
-    .meals {
-        grid-template-columns: repeat(2, 1fr);
-    }
+  .meals {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
-    .meal {
-        height: 20rem;
-        width: 20rem;
-    }
+  .meal {
+    height: 20rem;
+    width: 20rem;
+  }
 }
 
 // 31.25em = 500px
 @media (max-width: 31.25em) {
+  .meals {
+    grid-template-columns: 1fr;
+  }
 
-    .meals {
-        grid-template-columns: 1fr;
-    }
+  .meal {
+    height: 30rem;
+    width: 30rem;
+  }
 
-    .meal {
-        height: 30rem;
-        width: 30rem;
-    }
-
-    input[type="text"] {
-        width: 100%;
-    }
+  input[type="text"] {
+    width: 100%;
+  }
 }
