--- a/styles.scss
+++ b/styles.scss
@@ -17,20 +17,32 @@ body {
   -webkit-transition: background-color 0.5s ease;
   transition: background-color 0.5s ease;
 
+  // NOTE: code definitions when dark mode is enabled
+  // changing the background to a dark brown
+  // changing the universal text colour from dark brown to white
+  // we are basically switching the colour settings
   &.dark {
     background-color: #2d2013;
     color: #fff;
 
+    // changing the border of the image cards from dark brown to white, to make a dark contrast with the dark background
+    & .meals .meal img {
+      border: 4px solid #fff;
+    }
+
+    // doing the same thing to the image for a single, particular meal
     & .single-meal img {
       border: 4px solid #fff;
     }
 
-    & .meals .meal img {
-      border: 4px solid #fff;
+    & .title {
+      background-image: -webkit-gradient(linear, left top, right top, from(rgb(204, 204, 204)), to(rgba(255, 255, 255, 0.75)));
+      background-image: linear-gradient(to right, rgb(204, 204, 204), rgba(255, 255, 255, 0.75));
     }
   }
 }
 
+//NOTE: making our toggler
 .toggle {
   position: absolute;
   top: 5rem;
@@ -41,6 +53,9 @@ body {
   border-radius: 2rem;
   cursor: pointer;
 
+  // NOTE: making the circle inside our toggler. it is actually very easy:
+  // we simply make a pseudo element that is a circle and position it exactly where we want it inside our toggle container.
+  // since a pseudoelement is a child of the element from which it's created, we can give it an absolute positioning and define "relative" for the parent.
   &::before {
     content: "";
     position: absolute;
@@ -54,15 +69,18 @@ body {
     border-radius: 50%;
     background-color: #2d2013;
 
+    // transition for when we switch to and fro the active class
     -webkit-transition: all 0.5s ease;
 
     transition: all 0.5s ease;
   }
 }
 
+// NOTE: this is the class (specific only to the element with the toggle class) that will be activated (no pun intended) when we click on this toggle element (this is done via the javascript). when this element gets the active class, we're changing the border to white to contrast the dark background
 .toggle.active {
   border: 2px solid #fff;
 
+  // and we are moving the circle inside it from the left to the right of the toggle container, we changing the background color also to make it look nice.
   &::before {
     left: 2.2rem;
     background-color: #fff;
